fix(table): tweak headers and spacing based on Todd's feedback

--- a/src/components/common/table.module.scss
+++ b/src/components/common/table.module.scss
@@ -7,7 +7,7 @@
 .table {
   line-height: 1rem;
   border-collapse: collapse;
-  margin: 0.5rem 0 0;
+  margin: 0.5rem 0;
   font-variant-numeric: lining-nums tabular-nums;
   width: 100%;
 
@@ -48,6 +48,7 @@
       &[scope='col'] {
         text-align: right;
         font-size: 13px;
+        font-weight: 800;
       }
 
       &[scope='col'].align-left {
@@ -57,6 +58,7 @@
       &[scope='colgroup'] {
         text-align: left;
         font-size: 17px;
+        font-weight: 800;
         padding: 0.5rem;
       }
     }
